# signal-rs

./: Cargo.toml  README.md  build.rs  signal-rs.yml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: manual-smoke-test.md  setup.md
docs/design/: 2026-05-22-signal-rs-v0.1-design.md  2026-05-23-per-identity-prekey-storage.md  2026-05-23-signal-rs-message-surface.md
migrations/: 0001_initial.sql  0002_peer_profile_keys.sql
src/: api.rs  attachment.rs  cli.rs  client.rs  config.rs  crypto.rs  envelope.rs  lib.rs  link.rs  main.rs  net.rs  storage.rs
src/attachment/: tests.rs  upload.rs
src/cli/: tests.rs
src/client/: send.rs  status.rs  tests.rs
src/client/status/: tests.rs
src/config/: tests.rs
src/crypto/: device_name.rs  prekeys.rs  provisioning.rs  sealed.rs
src/crypto/device_name/: tests.rs
src/crypto/prekeys/: tests.rs
src/crypto/provisioning/: tests.rs
src/crypto/sealed/: tests.rs
src/envelope/: tests.rs
src/link/: tests.rs
src/proto/: device_name.proto  envelope.proto  service.proto
src/storage/: sqlite.rs  tx.rs
src/storage/sqlite/: tests.rs
src/storage/tx/: tests.rs
