[package]
name = "signal-rs"
version = "0.1.0"
edition = "2024"
authors = ["Scott Idler <scott.idler@gmail.com>"]
build = "build.rs"
description = "Native-Rust Signal client - library + CLI; v0.1 unblocks borg Note-to-Self ingest"
license = "AGPL-3.0-or-later"
repository = "https://github.com/scottidler/signal-rs"
readme = "README.md"

[dependencies]
clap = { version = "*", features = ["derive"] }
eyre = "*"
log = "*"
env_logger = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
dirs = "*"
colored = "*"

# libsignal v0.94.1 - three sibling crates from one workspace, one source.
# Cargo has no syntax for "share git/tag across multiple crate names", so the
# URL+tag repeats. libsignal-core comes transitively through libsignal-protocol;
# libsignal-net is direct because libsignal-net-chat does NOT re-export
# ProvisioningEvent (it lives in libsignal_net::chat::server_requests).
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.94.1" }
libsignal-net      = { git = "https://github.com/signalapp/libsignal", tag = "v0.94.1" }
libsignal-net-chat = { git = "https://github.com/signalapp/libsignal", tag = "v0.94.1" }
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "migrate"] }
prost = "0.14.3"
qrcode = { version = "0.14.1", features = ["image"] }
thiserror = "2.0.18"
futures = "0.3.32"
bytes = "1.11.1"
hkdf = "0.13.0"
hmac = "0.13.0"
sha2 = "0.11.0"
aes = "0.9.0"
cbc = "0.2.1"
subtle = "2.6.1"
zeroize = "1.8.2"
async-trait = "0.1.89"
rand = { version = "0.9.4", features = ["std"] }
base64 = "0.22.1"
http = "1.4.0"
reqwest = { version = "0.13.3", features = ["json"] }
serde_json = "1.0.150"
zkgroup = { git = "https://github.com/signalapp/libsignal", tag = "v0.94.1", version = "0.9.0" }
image = "0.25.10"
ctr = "0.10.1"

[dev-dependencies]
# Pin to match libsignal's workspace ("rand = 0.9.4, rand_chacha = 0.9");
# diverging would put two versions in the graph and the CryptoRng trait
# would not unify, breaking tests that call IdentityKeyPair::generate.
rand = "0.9.4"
rand_chacha = { version = "0.9", features = ["std"] }
# tempfile is used by the generated config/tests.rs and lib tests
tempfile = "3"
tokio = { version = "1.52.3", features = ["test-util", "macros"] }

[build-dependencies]
prost-build = "0.14.3"
# For build.rs if needed

# libsignal's workspace patches curve25519-dalek to Signal's fork; consuming it
# as a git dep doesn't carry that patch over, so we replicate it here. Without
# this block we get two versions of curve25519-dalek (upstream pulled by
# ed25519-dalek, Signal's fork pulled by zkgroup), which makes zkgroup fail.
# boring is patched for the same reason - libsignal-net pulls it in for TLS.
[patch.crates-io]
boring     = { git = "https://github.com/signalapp/boring", tag = "signal-v5.0.2" }
boring-sys = { git = "https://github.com/signalapp/boring", tag = "signal-v5.0.2" }
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
